--- a/Complete-header-with-layout/homepage.css
+++ b/Complete-header-with-layout/homepage.css
@@ -191,13 +191,20 @@ header{
     justify-content: end;
     padding-right: 48px;
 }
-.gridLook{
+.bannerImg{
     display: grid;
+    max-width: 100%;
+    height: auto;
+    position: relative;
     justify-content: center;
     gap: 10px;
     grid-template-areas: 
     "img1 img2" 
     "img1 img3";
+}
+.bannerTxt{
+    position: absolute;
+    top: 0;
 }
 #img1{
     grid-area: img1;
@@ -207,6 +214,33 @@ header{
 }
 #img3{
     grid-area: img3;
+}
+.txt1{
+    font-size: 40px;
+    padding: 50px 80px;
+    margin-left: 80px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.562);
+    border-radius: 10px;
+}
+.txt2{
+    font-size: 20px;
+    margin-left: 70px;
+    margin-top: 45px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.562);
+    border-radius: 10px;
+    text-align: center;
+    padding: 5px 10px;
+}
+.txt3{
+    font-size: 20px;
+    margin-top: 210px;
+    margin-left: 70px;
+    background-color: rgba(0, 0, 0, 0.562);
+    color: white;
+    border-radius: 10px;
+    padding: 5px 10px;
 }
   
 .features .feature{
