--- a/Complete-header-with-layout/homepage.css
+++ b/Complete-header-with-layout/homepage.css
@@ -193,7 +193,6 @@ header{
 }
 .bannerImg{
     display: grid;
-    max-width: 100%;
     height: auto;
     position: relative;
     justify-content: center;
@@ -219,6 +218,7 @@ header{
     font-size: 40px;
     padding: 50px 80px;
     margin-left: 80px;
+    margin-top: 60px;
     color: white;
     background-color: rgba(0, 0, 0, 0.562);
     border-radius: 10px;
